# khonliang-geneology-example

./: .gitignore  .mcp.json  README.md  config.yaml  pyproject.toml
docs/: architecture.md  getting-started.md  matching.md  mcp-server.md  quality.md  roles-and-routing.md
genealogy_agent/: __init__.py  chat_client.py  chat_handler.py  cli.py  config.py  consensus.py  cross_matcher.py  forest.py  gedcom_parser.py  gra_pipeline.py  importer.py  intent.py  match_agent.py  mcp_server.py  merge.py  personalities.py  query_parser.py  report_server.py  reports.py  researchers.py  roles.py  router.py  self_eval.py  server.py  skills.py  tool.py  tree_analysis.py  web_search.py  web_server.py
genealogy_agent/engines/: geni.py  geni_engine.py  wikitree.py  wikitree_engine.py
genealogy_agent/web/: index.html
tests/: conftest.py  test_config.py  test_consensus.py  test_cross_matcher.py  test_feedback.py  test_forest.py  test_gedcom_parser.py  test_gra_pipeline.py  test_importer.py  test_match_agent.py  test_merge.py  test_personalities.py  test_roles.py  test_router.py  test_self_eval.py
